# sub-batch

./: CHANGELOG  Cargo.toml  LICENSE  README.md  gen_changelog.sh
.cargo/: config
src/: actions.rs  config.rs  main.rs  net.rs  scanner.rs  sub_transformer.rs  util.rs
src/commands/: alass.rs  download.rs  mpv.rs  rename.rs  time.rs  util.rs
tests/: cli_test.rs  util.rs
tests/rename/: double_07
tests/rename_multiple/: sub1.jp.srt
tests/time_subs_only/: another.srt  sub.srt
