[package]
edition = "2021"
name = "sub-batch"
version = "1.1.1"
authors = ["Kalle Lindström <kalind@posteo.se>"]
description = "Match and rename subtitle files to video files and perfom other batch operations on subtitle files."
homepage = "https://github.com/kl/sub-batch"
repository = "https://github.com/kl/sub-batch"
readme = "README.md"
keywords = ["subtitle", "subtitles"]
categories = ["command-line-utilities"]
exclude = ["/tests"]
license = "MIT"

[dependencies]
regex = "1"
subparse = "0.7"
clap = "2"
lazy_static = "1"
encoding_rs = "0.8"
anyhow = "1"
which = "4"
rayon = "1"
tempfile = "3"
interprocess = "1"
crossterm = "0.27"
ctrlc = { version = "3", features = ["termination"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
glob = "0.3"
